@@ -1,3 +1,8 @@
+2016-07-20  Martin Jambor  <mjambor@suse.cz>
+
+        PR fortran/71688
+        * gfortran.dg/pr71688.f90: New test.
+
 2016-07-19  Jakub Jelinek  <jakub@redhat.com>
 
 	PR middle-end/71874
