@@ -1,3 +1,9 @@
+2016-07-20  Martin Jambor  <mjambor@suse.cz>
+
+        PR fortran/71688
+        * trans-decl.c (gfc_generate_function_code): Use get_create rather
+        than create to get a call graph node.
+
 2016-07-19  Jakub Jelinek  <jakub@redhat.com>
 
 	PR middle-end/71874
